--- a/views/clients/viewClient.handlebars
+++ b/views/clients/viewClient.handlebars
@@ -14,7 +14,9 @@
       <td>{{lname}}</td>
       <td>{{phoneNumber}}</td>
       <td>
-        <button type='button' class='btn btn-secondary'>Add Transaction</btn>
+        <form method="post" action="./clients/addTransact.handlebars">
+          <button name='id' type='button' value="{{phoneNumber}}" class='btn btn-secondary'>Add Transaction</btn>
+        </form>
       </td>
     </tr>
   </tbody>
