--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -20,7 +20,7 @@
           <div class="dropdown-menu">
             <a href="/clients/viewClient" class="dropdown-item">View Clients</a>
             <a href="/clients/addClient" class="dropdown-item">Add Clients</a>
-            <a href="/clients/addTransact" class="dropdown-item">Add Transaction</a>
+            <a href="/clients/viewClient" class="dropdown-item">Add Transaction</a>
             <a href="/clients/viewTransact" class="dropdown-item">View Transaction</a>
           </div>
         </li>
